# glue

./: .gitignore  README.md  examples.py  main.py  pyproject.toml
basic_examples/: example1.py  example10.py  example11.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py
complex_examples/: roof_obstructions.py  solar_panels.py
examples/: example1.py  example10.py  example11.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py
glue/: camera_util.py  config.py  conv_utils.py  glue_types.py  issue_utils.py  mesh_util.py  plan_util.py  pointcloud_utils.py  scene.py
tests/: test_conv_utils.py
