[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glue"
description = "the glue package"
keywords = ["geomatics", "vision"]
classifiers = ["Development Status :: 5 - Production/Stable",
 "Environment :: Console",
 "Intended Audience :: Science/Research",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
]
dependencies = [
  'requests==2.28.2',
  'laspy==2.2.0',
  'open3d==0.16.1',
  'click==7.1.2',
  'numpy==1.21.6',
  'pymap3d==2.7.0',
  'opencv-python==4.6.0.66'
]
requires-python = ">=3.7"
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "glue.__version__"}